# ApkSignatureKillerEx

./: README.MD  fake.jks  key.jks  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/c/: openat.c  openat.h
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
killer/: CMakeLists.txt  build.gradle
killer/src/main/assets/SignatureKiller/: origin.apk
killer/src/main/c/: mt_jni.c
